<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PalHunter</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="edit_content">Please input the conent</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">Palhunter</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="commit">Commit</string>
    <string name="tv_reminder">Reminder</string>
    <string name="done">Done</string>
    <string name="open_map">Open Map</string>
    <string name="login_button">Log in</string>

    <!-- Facebook app id -->
    <string name="facebook_app_id">603078449809460</string>
    <string name="facebook_app_secret">85b3cdff4b8667a8c329bff744d7b4d2</string>

    <!-- Action bar menu -->
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Location</string>
    <string name="title_activity_login">Log in</string>

    <!-- Used for Key values -->
    <string name="main_activity_saved_message">main_activity_saved_message</string>
    <string name="title_activity_user_info">Your Information</string>

    <!-- Text for button -->
    <string name="show_user_info">Show Info</string>
    <string name="show_user_location">Show User Location</string>
    <string name="get_user_address">Get User Address</string>
    <string name="update_location">Update Location</string>
    <string name="title_activity_facebook_login">Log in</string>
    <string name="title_activity_gcmdemo">GCMDemoActivity</string>
    <string name="gcm_test">GCM Test</string>
    <string name="title_activity_bottom_navigate">BottomNavigateActivity</string>
    <string name="bottom_nav_test">Bottom Nav Test</string>
    <string name="side_bar_test">Sidebar Test</string>
    <string name="title_activity_sidebar">SlideBar</string>
    <string name="start">START</string>
    <string name="finish">FINISH</string>
    <string name="calories_cal">Calories(KCal)</string>
    <string name="distance">Distance(m)</string>
    <string name="duration">Duration</string>
    <string name="str_share_with_your_friends">Share with your friends?</string>
    <string name="str_share_with_your_friends_msg">You are awesome! \n Share with your friends?</string>
    <string name="login_or_register">Login or Register</string>
    <string name="facebook">Facebook</string>
    <string name="title_activity_share_trip">ShareTripActivity</string>
    <string name="title_activity_view_trip">My Trips</string>

</resources>
