<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/tvPasswordDesc"
        android:text="@string/login_or_register" />

    <TextView
        android:id="@+id/tvEmailDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:layout_toLeftOf="@+id/btnLogin"
        android:text="Email:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/userInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/hello_world"
        android:visibility="gone" />

    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="30dp"
        android:text="@string/facebook" />

    <TextView
        android:id="@+id/tvPasswordDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="26dp"
        android:text="Password:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvEmailDesc"
        android:layout_alignBottom="@+id/tvEmailDesc"
        android:layout_alignLeft="@+id/btnLogin"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPasswordDesc"
        android:layout_alignBottom="@+id/tvPasswordDesc"
        android:layout_alignLeft="@+id/btnLogin"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>