<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="00:00:00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tvDurationDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDuration"
        android:layout_centerHorizontal="true"
        android:text="@string/duration"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvCaloriesDesc"
        android:layout_alignParentRight="true"
        android:layout_marginRight="37dp"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="5dp"
        android:background="@color/color_start_btn_bg"
        android:text="@string/start"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/color_start_btn_text" />

    <TextView
        android:id="@+id/tvCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvCaloriesDesc"
        android:layout_centerHorizontal="true"
        android:text="0.00"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvCaloriesDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvDistanceDesc"
        android:layout_alignBottom="@+id/tvDistanceDesc"
        android:layout_centerHorizontal="true"
        android:text="@string/calories_cal"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/map_container"
        android:layout_below="@+id/tvDurationDesc"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/btnStart"
        android:layout_below="@+id/tvStepsDesc"
        android:layout_centerVertical="true"
        android:layout_marginLeft="0dp"
        android:padding="5dp" >

        <!-- <fragment -->
        <!-- android:id="@+id/map" -->
        <!-- android:name="com.google.android.gms.maps.MapFragment" -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="match_parent" /> -->

        <com.google.android.gms.maps.MapView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <TextView
        android:id="@id/tvStepsDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvCaloriesDesc"
        android:layout_alignBottom="@+id/tvCaloriesDesc"
        android:layout_alignParentRight="true"
        android:layout_marginRight="27dp"
        android:text="Steps"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvDistanceDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDistance"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/tvDuration"
        android:text="@string/distance"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>